<resources>
    <string name="app_name">KnowledgeTree</string>
    <string name="completed">Completed</string>
    <string name="typeEditHint">Set the type...</string>
    <string name="titleEditHint">Enter the title...</string>
    <string name="detailEditHint">Enter the detail...</string>
    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="type">Type</string>
    <string name="issueType">Unknown</string>
    <string name="unknown">Unknown</string>
    <string name="todo">TODO</string>
    <string name="create">Create</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="userNameInputHint">Please enter username...</string>
    <string name="passwordInputHint">Please enter password...</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="fuzzyMatchQueryLabel">Fuzzy Match Query</string>
    <string name="fuzzyMatchQueryInputHint">Enter any text you want...</string>
    <string name="fuzzyMatchQueryButtonText">Find</string>


    <string name="filter_label">Order By:</string>
    <string name="filter_title">Title</string>
    <string name="filter_type">Type</string>
    <string name="filter_detail">Detail</string>


    <string name="issue_edit_save_btn">Save</string>
    <string name="issue_edit_add_task_btn">Add New Task</string>

    <string name="task_edit_title">Task Detail</string>
    <string name="task_edit_update_button_text">Update</string>
    <string name="task_edit_cancel_button_text">Cancel</string>
    <string name="task_edit_complete_checkbox_text">Completed</string>
    <string name="task_list_drag_Indicator_content_description">Please Drag this item to delete it</string>

    <string name="issue_list_view_more_items">More Items</string>
    <string name="issue_list_created_time">Created: 3 Jun 2008 11:05:30</string>
    <string name="issue_list_visited_time">Visited: 3 Jun 2008 11:05:30</string>
    <string name="issue_list_progress_blob">100%</string>
    <string name="issue_list_progress_task_count"></string>

    <string name="navigation_button_home">Home</string>
    <string name="navigation_button_issue">Issue</string>
    <string name="navigation_button_task">Task</string>


    <string name="overall_home_issue_title">Issue Progress</string>
    <string name="overall_home_issue_label_total">Total</string>
    <string name="overall_home_issue_label_total_number">0</string>
    <string name="overall_home_issue_label_resolved">Resolved</string>
    <string name="overall_home_issue_label_resolved_number">0</string>
    <string name="overall_home_issue_label_unresolved">Pending</string>
    <string name="overall_home_issue_label_unresolved_number">0</string>
    <string name="overall_home_issue_label_progress">0</string>

    <string name="overall_home_task_title">Task Progress</string>
    <string name="overall_home_task_label_total">Total</string>
    <string name="overall_home_task_label_total_number">0</string>
    <string name="overall_home_task_label_complete">Complete</string>
    <string name="overall_home_task_label_complete_number">0</string>
    <string name="overall_home_task_label_incomplete">Pending</string>
    <string name="overall_home_task_label_incomplete_number">0</string>
    <string name="overall_home_task_label_progress">0</string>

    <string name="issue_create_cancel_button_text">Cancel</string>

    <string name="issue_edit_cancel_button_text">Cancel</string>
    <string name="issue_edit_update_button_text">Update</string>
    <string name="issue_edit_remove_button_desc_text">Delete</string>
    <string name="task_edit_remove_button_desc_text">Delete</string>




</resources>