<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/issue_create_title_text"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/issue_create_title_input_text"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/titleEditHint"
        android:inputType="textNoSuggestions"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/issue_create_detail_text"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/issue_create_detail_input_text"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/detailEditHint"
        android:inputType="textNoSuggestions" />

    <TextView
        android:id="@+id/issue_create_type_text"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="18sp" />

    <MultiAutoCompleteTextView
        android:id="@+id/issue_create_type_input_text"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typeEditHint" />

    <CheckBox
        android:id="@+id/issue_create_complete_checkbox"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/completed"
        android:textSize="24sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/create_new_issue_buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/issue_create_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:text="@string/create"
            android:textSize="24sp" />

        <Button
            android:id="@+id/issue_create_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/issue_create_cancel_button_text"
            android:textSize="24sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>



</android.widget.LinearLayout>